--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,23 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "PORT=4000 DEBUG=api:* nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
     "debug": "4.3.4",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-async-errors": "3.1.1",
+    "http-errors": "2.0.0",
+    "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
   }
 }
